--- a/sass/layouts/_products.scss
+++ b/sass/layouts/_products.scss
@@ -31,3 +31,9 @@
   align-items: center;
   justify-content: center;
 }
+
+@media screen and (max-width: 1200px) {
+  .products {
+    display: none;
+  }
+}
