--- a/css/main.css
+++ b/css/main.css
@@ -367,23 +367,35 @@ body {
   letter-spacing: 0.06em;
 }
 
-.header {
-  border-bottom: 1px solid #eeeeee;
+.site-nav,
+.navigation,
+.auth-nav .item {
+  display: none;
+}
+
+.burger-btn {
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  margin-left: auto;
+  cursor: pointer;
 }
 
 .header-container {
   display: flex;
+  justify-content: space-between;
   align-items: center;
+}
+
+.header {
+  border-bottom: 1px solid #eeeeee;
 }
 
 .navigation {
   display: flex;
   align-items: center;
-}
-
-.auth-nav {
-  display: flex;
-  margin-left: auto;
 }
 
 .logo {
@@ -404,73 +416,93 @@ body {
   color: var(--accent-color);
 }
 
-.site-nav {
+.menu {
   display: flex;
-  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
-.site-nav .item:not(:last-child) {
-  margin-right: 50px;
+@media (max-width: 767px) {
+  .menu {
+    display: none;
+  }
 }
 
-.site-nav .link {
-  position: relative;
-  display: block;
-  color: var(--title-text-color);
+.menu .link {
+  padding: 10px;
+  color: inherit;
   text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav .link:hover, .site-nav .link:focus, .site-nav .link:active, .site-nav .link.current {
-  color: var(--accent-color);
-  fill: var(--accent-color);
+.menu .link:hover,
+.menu .link:focus {
+  text-decoration: underline;
 }
 
-.site-nav .link.current::after {
-  content: "";
-  display: block;
-  background-color: var(--accent-color);
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
+.menu-toggle {
+  display: flex;
   position: absolute;
+  right: 10px;
+  top: 10px;
+  padding: 0;
+  border-radius: 50%;
+  background: transparent;
+  border: transparent;
+  width: 30px;
+  height: 30px;
+  justify-content: center;
   align-items: center;
-  bottom: -1px;
+  cursor: pointer;
+  fill: #000000;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.auth-nav .item + .item {
-  margin-left: 50px;
-}
-
-.auth-nav .link {
-  color: var(--primary-text-color);
-  fill: var(--primary-text-color);
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.auth-nav-svg {
-  margin-right: 10px;
-}
-
-.auth-nav-link {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.auth-nav-link:hover, .auth-nav-link:focus, .auth-nav-link:active {
-  color: var(--accent-color);
+.menu-toggle:focus, .menu-toggle:active, .menu-toggle:hover {
   fill: var(--accent-color);
+}
+
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: #ffffff;
+  z-index: 100;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: #fff;
+}
+
+.mobile-menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.mobile-menu .link {
+  display: block;
+  padding: 10px;
+  color: #fff;
+  text-decoration: none;
 }
 
 .hero {
@@ -705,6 +737,30 @@ body {
 .clients-list__link:hover, .clients-list__link:focus, .clients-list__link:active {
   border-color: var(--accent-color);
   fill: var(--accent-color);
+}
+
+@media screen and (min-width: 768px) {
+  .clients-list__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 92px;
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc((100% - 180px) / 6);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 92px;
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc((100% - 180px) / 6);
+  }
 }
 
 .contacts {
