--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -11,6 +11,7 @@
   height: 92px;
   margin-left: 30px;
   margin-top: 30px;
+
   flex-basis: calc((100% - 180px) / 6);
 }
 
@@ -36,6 +37,26 @@
 }
 
 @media screen and (min-width: 768px) {
+  .clients-list__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 92px;
+    margin-left: 30px;
+    margin-top: 30px;
+
+    flex-basis: calc((100% - 180px) / 6);
+  }
 }
 @media screen and (min-width: 1200px) {
+  .clients-list__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 92px;
+    margin-left: 30px;
+    margin-top: 30px;
+
+    flex-basis: calc((100% - 180px) / 6);
+  }
 }
