--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,18 +1,40 @@
+.site-nav,
+.navigation,
+.auth-nav .item {
+  display: none;
+}
+
+.burger-btn {
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  margin-left: auto;
+  cursor: pointer;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .header {
   border-bottom: 1px solid #eeeeee;
 }
-.header-container {
-  display: flex;
-  align-items: center;
-}
+// .header-container {
+//   display: flex;
+//   align-items: center;
+// }
 .navigation {
   display: flex;
   align-items: center;
 }
-.auth-nav {
-  display: flex;
-  margin-left: auto;
-}
+// .auth-nav {
+//   display: flex;
+//   margin-left: auto;
+// }
 
 .logo {
   color: #000000;
@@ -30,79 +52,170 @@
   color: var(--accent-color);
 }
 
-.site-nav {
-  display: flex;
-  align-items: center;
+// .site-nav {
+//   display: flex;
+//   align-items: center;
 
-  & .item:not(:last-child) {
-    margin-right: 50px;
+//   & .item:not(:last-child) {
+//     margin-right: 50px;
+//   }
+// }
+
+// .site-nav .link {
+//   position: relative;
+//   display: block;
+//   color: var(--title-text-color);
+//   text-decoration: none;
+//   font-weight: 500;
+//   font-size: 14px;
+//   line-height: 1.14;
+//   letter-spacing: 0.02em;
+//   padding-top: 32px;
+//   padding-bottom: 32px;
+
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:hover,
+//   &:focus,
+//   &:active,
+//   &.current {
+//     color: var(--accent-color);
+//     fill: var(--accent-color);
+//   }
+
+//   &.current::after {
+//     content: "";
+//     display: block;
+//     background-color: var(--accent-color);
+//     width: 100%;
+//     height: 4px;
+//     border-radius: 2px;
+//     position: absolute;
+//     align-items: center;
+//     bottom: -1px;
+//   }
+// }
+
+// .auth-nav .item + .item {
+//   margin-left: 50px;
+// }
+
+// .auth-nav .link {
+//   color: var(--primary-text-color);
+//   fill: var(--primary-text-color);
+//   text-decoration: none;
+//   font-weight: 500;
+//   font-size: 14px;
+//   line-height: 1.14;
+//   letter-spacing: 0.02em;
+//   padding-top: 32px;
+//   padding-bottom: 32px;
+// }
+
+// .auth-nav-svg {
+//   margin-right: 10px;
+// }
+
+// .auth-nav-link {
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:hover,
+//   &:focus,
+//   &:active {
+//     color: var(--accent-color);
+//     fill: var(--accent-color);
+//   }
+// }
+
+.menu {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+@media (max-width: 767px) {
+  .menu {
+    display: none;
   }
 }
 
-.site-nav .link {
-  position: relative;
-  display: block;
-  color: var(--title-text-color);
+.menu .link {
+  padding: 10px;
+  color: inherit;
   text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  padding-top: 32px;
-  padding-bottom: 32px;
+}
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.menu .link:hover,
+.menu .link:focus {
+  text-decoration: underline;
+}
 
-  &:hover,
+.menu-toggle {
+  display: flex;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  padding: 0;
+  border-radius: 50%;
+  background: transparent;
+  border: transparent;
+  width: 30px;
+  height: 30px;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  fill: #000000;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:focus,
   &:active,
-  &.current {
-    color: var(--accent-color);
+  &:hover {
     fill: var(--accent-color);
   }
+}
 
-  &.current::after {
-    content: "";
-    display: block;
-    background-color: var(--accent-color);
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    position: absolute;
-    align-items: center;
-    bottom: -1px;
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
   }
 }
 
-.auth-nav .item + .item {
-  margin-left: 50px;
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: #ffffff;
+  z-index: 100;
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.auth-nav .link {
-  color: var(--primary-text-color);
-  fill: var(--primary-text-color);
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: #fff;
+}
+
+.mobile-menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.mobile-menu .link {
+  display: block;
+  padding: 10px;
+  color: #fff;
   text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.auth-nav-svg {
-  margin-right: 10px;
-}
-
-.auth-nav-link {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus,
-  &:active {
-    color: var(--accent-color);
-    fill: var(--accent-color);
-  }
 }
