--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "./components/social-link-list";
 @import "./components/subtitle";
 @import "./components/title";
+@import "./components/burger-menu";
 
 //LAYOUT
 @import "./layouts/header";
