--- a/css/main.css
+++ b/css/main.css
@@ -367,6 +367,13 @@ body {
   letter-spacing: 0.06em;
 }
 
+@media screen and (min-width: 768px) {
+  .menu-container,
+  .burger-btn {
+    display: none;
+  }
+}
+
 .menu {
   display: flex;
   padding: 0;
@@ -374,21 +381,72 @@ body {
   list-style: none;
 }
 
-@media (max-width: 767px) {
-  .menu {
-    display: none;
-  }
+.burger-btn {
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  margin-left: auto;
+  cursor: pointer;
 }
 
-.menu .link {
-  padding: 10px;
-  color: inherit;
+.mobile-menu {
+  text-decoration: none;
+  color: #000000;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  margin-bottom: 32px;
+}
+
+.mobile-menu:hover, .mobile-menu:focus, .mobile-menu:active, .mobile-menu.current {
+  color: var(--accent-color);
+}
+
+.mobile-contact__link-tel {
+  font-size: 34px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  text-decoration: none;
+  margin-bottom: 32px;
+}
+
+.mobile-contact__link-tel:hover, .mobile-contact__link-tel:focus, .mobile-contact__link-tel:active, .mobile-contact__link-tel.current {
+  color: var(--primary-text-color);
+}
+
+.mobile-contact__link-mail {
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
   text-decoration: none;
 }
 
-.menu .link:hover,
-.menu .link:focus {
-  text-decoration: underline;
+.mobile-contact__link-mail:hover, .mobile-contact__link-mail:focus, .mobile-contact__link-mail:active, .mobile-contact__link-mail.current {
+  color: var(--accent-color);
+}
+
+.mobile-social {
+  display: flex;
+  margin-right: 20px;
+  align-items: bottom;
+  justify-content: space-between;
+  padding: 40px;
+}
+
+.mobile-social__link {
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  text-decoration: none;
+}
+
+.mobile-social__link:hover, .mobile-social__link:focus, .mobile-social__link:active, .mobile-social__link.current {
+  color: var(--primary-text-color);
 }
 
 .menu-toggle {
@@ -398,25 +456,18 @@ body {
   top: 10px;
   padding: 0;
   border-radius: 50%;
-  background: transparent;
+  background: #ffffff;
   border: transparent;
   width: 30px;
   height: 30px;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  fill: #000000;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-toggle:focus, .menu-toggle:active, .menu-toggle:hover {
   fill: var(--accent-color);
-}
-
-@media (min-width: 768px) {
-  .menu-toggle {
-    display: none;
-  }
 }
 
 .menu-container {
@@ -426,10 +477,10 @@ body {
   width: 100vw;
   height: 100vh;
   padding: 32px;
-  background-color: #ffffff;
+  background: #ffffff;
   z-index: 100;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
 }
 
 .menu-container.is-open {
@@ -443,43 +494,20 @@ body {
   color: #fff;
 }
 
-.mobile-menu {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.mobile-menu .link {
-  display: block;
-  padding: 10px;
-  color: #fff;
-  text-decoration: none;
-}
-
-.site-nav,
-.navigation,
-.auth-nav .item {
-  display: none;
-}
-
-.burger-btn {
-  border: none;
-  padding: 0;
-  background-color: transparent;
-  width: 40px;
-  height: 40px;
-  margin-left: auto;
-  cursor: pointer;
-}
-
-.header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+@media screen and (max-width: 767px) {
+  .site-nav,
+  .auth-nav {
+    display: none;
+  }
 }
 
 .header {
   border-bottom: 1px solid #eeeeee;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
 }
 
 .navigation {
@@ -505,11 +533,93 @@ body {
   color: var(--accent-color);
 }
 
+@media screen and (min-width: 768px) {
+  .site-nav {
+    display: flex;
+    align-items: center;
+  }
+  .site-nav .item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .site-nav .link {
+    position: relative;
+    display: block;
+    color: var(--title-text-color);
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .site-nav .link:hover, .site-nav .link:focus, .site-nav .link:active, .site-nav .link.current {
+    color: var(--accent-color);
+    fill: var(--accent-color);
+  }
+  .site-nav .link.current::after {
+    content: "";
+    display: block;
+    background-color: var(--accent-color);
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    position: absolute;
+    align-items: center;
+    bottom: -1px;
+  }
+  .auth-nav {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+  }
+  .auth-nav .link {
+    color: var(--primary-text-color);
+    fill: var(--primary-text-color);
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+  .auth-nav-svg {
+    margin-right: 8px;
+  }
+  .auth-nav-link {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .auth-nav-link:hover, .auth-nav-link:focus, .auth-nav-link:active {
+    color: var(--accent-color);
+    fill: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .auth-nav .item + .item {
+    margin-left: 50px;
+  }
+  .auth-nav {
+    display: flex;
+    flex-direction: row;
+    margin-left: auto;
+  }
+  .auth-nav .link {
+    font-size: 14px;
+  }
+  .auth-nav-svg {
+    margin-right: 10px;
+  }
+}
+
 .hero {
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
   background-color: #c4c4c4;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bground-mobile-foto-hero@1x.jpg);
   background-repeat: no-repeat;
   max-width: 480px;
   height: 400px;
@@ -546,6 +656,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bground-tablet-foto-hero@1x.jpg);
     max-width: 768px;
     height: 400px;
   }
@@ -555,6 +666,7 @@ body {
   .hero {
     padding-top: 200px;
     padding-bottom: 200px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background-foto-hero@1x.jpg);
     max-width: 1600px;
     height: 600px;
   }
@@ -566,7 +678,6 @@ body {
 
 .features-list {
   display: flex;
-  flex-direction: column;
   flex-wrap: wrap;
 }
 
@@ -594,7 +705,7 @@ body {
   .features-list__item {
     margin-left: 30px;
     margin-top: 30px;
-    flex-basis: calc((100% - 120px) / 4);
+    flex-basis: calc((100% - 60px) / 2);
   }
   .features-list__svg {
     margin-right: 10px;
@@ -609,6 +720,9 @@ body {
 @media screen and (min-width: 1200px) {
   .features {
     padding-bottom: 47px;
+  }
+  .features-list__item {
+    flex-basis: calc((100% - 120px) / 4);
   }
 }
 
@@ -708,6 +822,7 @@ body {
 
 .clients-list {
   display: flex;
+  flex-wrap: wrap;
   margin-left: -30px;
   margin-top: -30px;
 }
@@ -719,7 +834,7 @@ body {
   height: 92px;
   margin-left: 30px;
   margin-top: 30px;
-  flex-basis: calc((100% - 180px) / 6);
+  width: calc((100% - 60px) / 2);
 }
 
 .clients-list__link {
@@ -741,24 +856,13 @@ body {
 
 @media screen and (min-width: 768px) {
   .clients-list__item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 92px;
-    margin-left: 30px;
-    margin-top: 30px;
-    flex-basis: calc((100% - 180px) / 6);
+    width: calc((100% - 90px) / 3);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .clients-list__item {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 92px;
-    margin-left: 30px;
-    margin-top: 30px;
     flex-basis: calc((100% - 180px) / 6);
   }
 }
@@ -878,6 +982,14 @@ address {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .container-footer {
+    flex-wrap: wrap;
+    flex-basis: calc((100% - 180px) / 2);
+    justify-content: space-between;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .container-address {
     margin-right: 70px;
@@ -886,8 +998,8 @@ address {
 
 .filter {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: right;
+  flex-wrap: wrap;
   margin-bottom: 50px;
 }
 
@@ -907,6 +1019,7 @@ address {
   letter-spacing: 0.03em;
   cursor: pointer;
   border: none;
+  margin-bottom: 15px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -985,5 +1098,17 @@ address {
 .portfolio-list-link:hover .overlay,
 .portfolio-list-link:focus .overlay {
   transform: translateY(0%);
+}
+
+@media screen and (min-width: 768px) {
+  .filter {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .filter-button {
+    margin-bottom: 0px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
