--- a/sass/components/_burger-menu.scss
+++ b/sass/components/_burger-menu.scss
@@ -1,3 +1,10 @@
+@media screen and (min-width: 768px) {
+  .menu-container,
+  .burger-btn {
+    display: none;
+  }
+}
+
 .menu {
   display: flex;
   padding: 0;
@@ -5,21 +12,83 @@
   list-style: none;
 }
 
-@media (max-width: 767px) {
-  .menu {
-    display: none;
+.burger-btn {
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  margin-left: auto;
+  cursor: pointer;
+}
+
+.mobile-menu {
+  text-decoration: none;
+  color: #000000;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  margin-bottom: 32px;
+
+  &:hover,
+  &:focus,
+  &:active,
+  &.current {
+    color: var(--accent-color);
   }
 }
 
-.menu .link {
-  padding: 10px;
-  color: inherit;
+.mobile-contact__link-tel {
+  font-size: 34px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
   text-decoration: none;
+  margin-bottom: 32px;
+  &:hover,
+  &:focus,
+  &:active,
+  &.current {
+    color: var(--primary-text-color);
+  }
 }
 
-.menu .link:hover,
-.menu .link:focus {
-  text-decoration: underline;
+.mobile-contact__link-mail {
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  text-decoration: none;
+
+  &:hover,
+  &:focus,
+  &:active,
+  &.current {
+    color: var(--accent-color);
+  }
+}
+
+.mobile-social {
+  display: flex;
+  margin-right: 20px;
+  align-items: bottom;
+  justify-content: space-between;
+  padding: 40px;
+}
+
+.mobile-social__link {
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  text-decoration: none;
+
+  &:hover,
+  &:focus,
+  &:active,
+  &.current {
+    color: var(--primary-text-color);
+  }
 }
 
 .menu-toggle {
@@ -29,25 +98,19 @@
   top: 10px;
   padding: 0;
   border-radius: 50%;
-  background: transparent;
+  background: #ffffff;
   border: transparent;
   width: 30px;
   height: 30px;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  fill: #000000;
+
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:focus,
   &:active,
   &:hover {
     fill: var(--accent-color);
-  }
-}
-
-@media (min-width: 768px) {
-  .menu-toggle {
-    display: none;
   }
 }
 
@@ -58,13 +121,11 @@
   width: 100vw;
   height: 100vh;
   padding: 32px;
-  background-color: #ffffff;
+  background: #ffffff;
   z-index: 100;
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;v
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
 }
 
 .menu-container.is-open {
@@ -78,15 +139,5 @@
   color: #fff;
 }
 
-.mobile-menu {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.mobile-menu .link {
-  display: block;
-  padding: 10px;
-  color: #fff;
-  text-decoration: none;
+@media screen and (max-width: 1200px) {
 }
