--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,5 +1,6 @@
 .clients-list {
   display: flex;
+  flex-wrap: wrap;
   margin-left: -30px;
   margin-top: -30px;
 }
@@ -12,13 +13,14 @@
   margin-left: 30px;
   margin-top: 30px;
 
-  flex-basis: calc((100% - 180px) / 6);
+  width: calc((100% - 60px) / 2);
 }
 
 .clients-list__link {
   width: 100%;
   height: 100%;
   display: flex;
+
   justify-content: center;
   align-items: center;
   fill: #afb1b8;
@@ -38,25 +40,14 @@
 
 @media screen and (min-width: 768px) {
   .clients-list__item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 92px;
-    margin-left: 30px;
-    margin-top: 30px;
-
-    flex-basis: calc((100% - 180px) / 6);
+    width: calc((100% - 90px) / 3);
+    // flex-basis: calc((100% - 180px) / 6);
   }
 }
+
 @media screen and (min-width: 1200px) {
   .clients-list__item {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 92px;
-    margin-left: 30px;
-    margin-top: 30px;
-
     flex-basis: calc((100% - 180px) / 6);
   }
 }
