--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -120,9 +120,12 @@ address {
   }
 }
 
-
-
 @media screen and (min-width: 768px) {
+  .container-footer {
+    flex-wrap: wrap;
+    flex-basis: calc((100% - 180px) / 2);
+    justify-content: space-between;
+  }
 }
 
 @media screen and (min-width: 1200px) {
