--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,40 +1,21 @@
-.site-nav,
-.navigation,
-.auth-nav .item {
-  display: none;
-}
-
-.burger-btn {
-  border: none;
-  padding: 0;
-  background-color: transparent;
-  width: 40px;
-  height: 40px;
-  margin-left: auto;
-  cursor: pointer;
-}
-
-.header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+@media screen and (max-width: 767px) {
+  .site-nav,
+  .auth-nav {
+    display: none;
+  }
 }
 
 .header {
   border-bottom: 1px solid #eeeeee;
 }
-// .header-container {
-//   display: flex;
-//   align-items: center;
-// }
+.header-container {
+  display: flex;
+  align-items: center;
+}
 .navigation {
   display: flex;
   align-items: center;
 }
-// .auth-nav {
-//   display: flex;
-//   margin-left: auto;
-// }
 
 .logo {
   color: #000000;
@@ -52,79 +33,104 @@
   color: var(--accent-color);
 }
 
-// .site-nav {
-//   display: flex;
-//   align-items: center;
+@media screen and (min-width: 768px) {
+  .site-nav {
+    display: flex;
+    align-items: center;
 
-//   & .item:not(:last-child) {
-//     margin-right: 50px;
-//   }
-// }
+    & .item:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
 
-// .site-nav .link {
-//   position: relative;
-//   display: block;
-//   color: var(--title-text-color);
-//   text-decoration: none;
-//   font-weight: 500;
-//   font-size: 14px;
-//   line-height: 1.14;
-//   letter-spacing: 0.02em;
-//   padding-top: 32px;
-//   padding-bottom: 32px;
+  .site-nav .link {
+    position: relative;
+    display: block;
+    color: var(--title-text-color);
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    padding-top: 32px;
+    padding-bottom: 32px;
 
-//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-//     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-//   &:hover,
-//   &:focus,
-//   &:active,
-//   &.current {
-//     color: var(--accent-color);
-//     fill: var(--accent-color);
-//   }
+    &:hover,
+    &:focus,
+    &:active,
+    &.current {
+      color: var(--accent-color);
+      fill: var(--accent-color);
+    }
 
-//   &.current::after {
-//     content: "";
-//     display: block;
-//     background-color: var(--accent-color);
-//     width: 100%;
-//     height: 4px;
-//     border-radius: 2px;
-//     position: absolute;
-//     align-items: center;
-//     bottom: -1px;
-//   }
-// }
+    &.current::after {
+      content: "";
+      display: block;
+      background-color: var(--accent-color);
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
+      position: absolute;
+      align-items: center;
+      bottom: -1px;
+    }
+  }
 
-// .auth-nav .item + .item {
-//   margin-left: 50px;
-// }
+  .auth-nav {
+    display: flex;
+    flex-direction: column;
 
-// .auth-nav .link {
-//   color: var(--primary-text-color);
-//   fill: var(--primary-text-color);
-//   text-decoration: none;
-//   font-weight: 500;
-//   font-size: 14px;
-//   line-height: 1.14;
-//   letter-spacing: 0.02em;
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-// }
+    margin-left: auto;
+  }
 
-// .auth-nav-svg {
-//   margin-right: 10px;
-// }
+  .auth-nav .link {
+    color: var(--primary-text-color);
+    fill: var(--primary-text-color);
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 
-// .auth-nav-link {
-//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-//     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .auth-nav-svg {
+    margin-right: 8px;
+  }
 
-//   &:hover,
-//   &:focus,
-//   &:active {
-//     color: var(--accent-color);
-//     fill: var(--accent-color);
-//   }
-// }
+  .auth-nav-link {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus,
+    &:active {
+      color: var(--accent-color);
+      fill: var(--accent-color);
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .auth-nav .item + .item {
+    margin-left: 50px;
+  }
+
+  .auth-nav {
+    display: flex;
+    flex-direction: row;
+    margin-left: auto;
+  }
+
+  .auth-nav .link {
+    font-size: 14px;
+  }
+
+  .auth-nav-svg {
+    margin-right: 10px;
+  }
+}
