--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,7 +1,8 @@
 .filter {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: right;
+  flex-wrap: wrap;
+
   margin-bottom: 50px;
 }
 .filter .item:not(:last-child) {
@@ -19,6 +20,7 @@
   letter-spacing: 0.03em;
   cursor: pointer;
   border: none;
+  margin-bottom: 15px;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -104,5 +106,18 @@
   &:hover .overlay,
   &:focus .overlay {
     transform: translateY(0%);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filter {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .filter-button {
+    margin-bottom: 0px;
   }
 }
