--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -63,7 +63,7 @@ address {
   margin-bottom: 20px;
 }
 .subscription {
-  margin-left: auto;
+  align-items: center;
   display: flex;
 }
 
@@ -112,7 +112,7 @@ address {
   right: 28px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .container-footer {
     flex-direction: column;
     align-items: center;
@@ -131,5 +131,10 @@ address {
 @media screen and (min-width: 1200px) {
   .container-address {
     margin-right: 70px;
+  }
+
+  .subscription {
+    margin-left: auto;
+    display: flex;
   }
 }
