--- a/css/main.css
+++ b/css/main.css
@@ -875,6 +875,7 @@ body {
 
 .container-footer {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
 }
 
@@ -975,18 +976,23 @@ address {
 }
 
 @media screen and (max-width: 768px) {
-  .container-footer {
-    flex-direction: column;
-    align-items: center;
+  .container-address,
+  .social-media {
+    width: 232px;
+    width: 100%;
     text-align: center;
   }
-}
-
-@media screen and (min-width: 768px) {
-  .container-footer {
-    flex-wrap: wrap;
-    flex-basis: calc((100% - 180px) / 2);
-    justify-content: space-between;
+  .social-media-footer {
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+  }
+  .subscription-form-input {
+    width: 100%;
+    padding-bottom: 20px;
+  }
+  .footer-form-title {
+    text-align: center;
   }
 }
 
