--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -114,41 +114,36 @@ address {
 }
 
 @media screen and (max-width: 768px) {
-  // .container-footer {
-  //   flex-direction: column;
-  //   align-items: center;
-  //   text-align: center;
-  // }
-
-  // @media screen and (max-width: 1200px) {
-  //   .footer-container {
-  //     display: flex;
-  //     flex-wrap: wrap;
-  //     flex-direction: row;
-  //     padding: 60px 89px 60px 76px;
-  //     margin: auto;
-  //   }
-
   .container-address,
-  .social-media {
-    width: 232px;
+  .social-media-footer {
     width: 100%;
     text-align: center;
+    align-items: center;
+    margin-right: 100px;
+    margin-left: 100px;
+    margin-bottom: 60px;
   }
 
-  .social-media-footer {
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: center;
-  }
   .subscription-form-input {
     width: 100%;
-    padding-bottom: 20px;
+    // padding-bottom: 20px;
   }
-
+  .subscription-form {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
   .footer-form-title {
     text-align: center;
   }
+
+  .subscription-form-submit {
+    margin-top: 20px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
 }
 
 @media screen and (min-width: 1200px) {
