--- a/css/main.css
+++ b/css/main.css
@@ -404,6 +404,10 @@ body {
   color: var(--accent-color);
 }
 
+.mobile-menu-list {
+  margin-bottom: 200px;
+}
+
 .mobile-contact__link-tel {
   font-size: 34px;
   line-height: 40px;
@@ -1000,10 +1004,26 @@ address {
   .subscription-form-submit {
     margin-top: 20px;
   }
+  .subscription-form-icon {
+    position: absolute;
+    top: 77%;
+    left: 62%;
+    right: 28px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .container-address,
+  .subscription {
+    margin-left: 60px;
+    margin-right: 60px;
+    margin-bottom: 60px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .container-address {
+    margin-right: 70px;
     margin-right: 70px;
   }
   .subscription {
