--- a/css/main.css
+++ b/css/main.css
@@ -405,7 +405,7 @@ body {
 }
 
 .mobile-menu-list {
-  margin-bottom: 200px;
+  margin-bottom: 150px;
 }
 
 .mobile-contact__link-tel {
@@ -438,7 +438,10 @@ body {
   margin-right: 20px;
   align-items: bottom;
   justify-content: space-between;
-  padding: 40px;
+}
+
+.mobile-contacts {
+  margin-bottom: 64px;
 }
 
 .mobile-social__link {
