--- a/sass/components/_burger-menu.scss
+++ b/sass/components/_burger-menu.scss
@@ -39,7 +39,7 @@
 }
 
 .mobile-menu-list {
-  margin-bottom: 200px;
+  margin-bottom: 150px;
 }
 .mobile-contact__link-tel {
   font-size: 34px;
@@ -76,9 +76,13 @@
   margin-right: 20px;
   align-items: bottom;
   justify-content: space-between;
-  padding: 40px;
+  // padding: 40px;
 }
 
+//
+.mobile-contacts {
+  margin-bottom: 64px;
+}
 .mobile-social__link {
   font-size: 18px;
   line-height: 1.22;
