--- a/sass/components/_burger-menu.scss
+++ b/sass/components/_burger-menu.scss
@@ -1,34 +1,78 @@
 @media screen and (min-width: 768px) {
-  .menu-container,
   .burger-btn {
     display: none;
   }
 }
 
-.menu {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  list-style: none;
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
 .burger-btn {
+  background: transparent;
   border: none;
   padding: 0;
-  background-color: transparent;
   width: 40px;
   height: 40px;
-  margin-left: auto;
   cursor: pointer;
 }
 
+.mobile-container {
+  position: relative;
+  padding-left: 40px;
+  padding-top: 48px;
+}
+
 .mobile-menu {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #ffffff;
+  z-index: 100;
+  overflow: scroll;
+
+  transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu__close-btn {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  background: transparent;
+  border: none;
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+
+.mobile-menu__close-icon {
+  width: 20px;
+  height: 25px;
+  fill: #000000;
+}
+
+.mobile-nav-list {
+  margin-bottom: 300px;
+}
+
+.mobile-nav-list-item {
+  margin-bottom: 32px;
+}
+.mobile-nav-list-link {
   text-decoration: none;
   color: #000000;
   font-size: 40px;
   line-height: 1.18;
   letter-spacing: 0.02em;
-  margin-bottom: 32px;
 
   &:hover,
   &:focus,
@@ -37,17 +81,19 @@
     color: var(--accent-color);
   }
 }
-
-.mobile-menu-list {
-  margin-bottom: 150px;
+.mobile-contacts-list {
+  margin-bottom: 64px;
 }
-.mobile-contact__link-tel {
+.mobile-contacts-list-item {
+  margin-bottom: 32px;
+}
+.mobile-contacts-list-link-tel {
   font-size: 34px;
   line-height: 40px;
   letter-spacing: 0.02em;
   color: var(--accent-color);
   text-decoration: none;
-  margin-bottom: 32px;
+
   &:hover,
   &:focus,
   &:active,
@@ -56,7 +102,7 @@
   }
 }
 
-.mobile-contact__link-mail {
+.mobile-contacts-list-link-email {
   font-size: 24px;
   line-height: 1.16;
   letter-spacing: 0.02em;
@@ -70,20 +116,11 @@
     color: var(--accent-color);
   }
 }
-
-.mobile-social {
+.mobile-social-list {
   display: flex;
-  margin-right: 20px;
-  align-items: bottom;
-  justify-content: space-between;
-  // padding: 40px;
+  padding-bottom: 48px;
 }
-
-//
-.mobile-contacts {
-  margin-bottom: 64px;
-}
-.mobile-social__link {
+.mobile-social-list-link {
   font-size: 18px;
   line-height: 1.22;
   letter-spacing: 0.02em;
@@ -97,51 +134,18 @@
     color: var(--primary-text-color);
   }
 }
+.mobile-social-list-item {
+  margin-right: 10px;
+  padding-right: 10px;
 
-.menu-toggle {
-  display: flex;
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  padding: 0;
-  border-radius: 50%;
-  background: #ffffff;
-  border: transparent;
-  width: 30px;
-  height: 30px;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:focus,
-  &:active,
-  &:hover {
-    fill: var(--accent-color);
+  &:not(:last-child) {
+    margin-right: 10px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
   }
 }
-
-.menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 32px;
-  background: #ffffff;
-  z-index: 100;
-
-  transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
-}
-
-.menu-container.is-open {
-  transform: translateX(0);
-}
-
-.menu-container .menu-toggle {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  color: #fff;
+@media screen and (max-width: 768px) {
+  .header-container {
+    justify-content: space-between;
+    padding: 10px;
+  }
 }
