--- a/sass/components/_burger-menu.scss
+++ b/sass/components/_burger-menu.scss
@@ -58,6 +58,12 @@
   width: 20px;
   height: 25px;
   fill: #000000;
+
+  &:hover,
+  &:focus,
+  &:active {
+    fill: var(--accent-color);
+  }
 }
 
 .mobile-nav-list {
