--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -18,8 +18,8 @@
   padding: 40px;
   display: block;
   margin: auto;
-  width: 528px;
-  min-height: 581px;
+  width: 450px;
+  min-height: 609px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -73,11 +73,11 @@
 }
 
 .contact-form {
-  width: 448px;
+  width: 370px;
   margin: 0 auto;
 
   & a {
-    font-size: 14px;
+    font-size: 12px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--accent-color);
@@ -94,7 +94,7 @@
 
   cursor: pointer;
   font-size: 12px;
-  line-height: 1.67;
+  line-height: 1.15;
   letter-spacing: 0.01em;
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -153,7 +153,7 @@
   }
 }
 .contact-form-checkbox-condition {
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
@@ -198,5 +198,28 @@
     outline: none;
     border-color: var(--accent-color);
     fill: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact-form-input {
+    line-height: 1.67;
+  }
+
+  .modal {
+    width: 528px;
+    min-height: 581px;
+  }
+
+  .contact-form {
+    width: 448px;
+  }
+
+  .contact-form-checkbox-condition {
+    font-size: 14px;
+  }
+
+  .contact-form a {
+    font-size: 14px;
   }
 }
