--- a/css/main.css
+++ b/css/main.css
@@ -743,6 +743,10 @@ body {
   letter-spacing: 0.03em;
 }
 
+.features-list__item h3 {
+  text-align: center;
+}
+
 @media screen and (min-width: 768px) {
   .features-list__item {
     margin-left: 30px;
@@ -756,6 +760,9 @@ body {
     margin-left: -30px;
     margin-top: -30px;
     flex-direction: row;
+  }
+  .features-list__item h3 {
+    text-align: left;
   }
 }
 
