--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -26,6 +26,9 @@
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
+.features-list__item h3 {
+  text-align: center;
+}
 
 @media screen and (min-width: 768px) {
   .features-list__item {
@@ -42,6 +45,9 @@
     margin-left: -30px;
     margin-top: -30px;
     flex-direction: row;
+  }
+  .features-list__item h3 {
+    text-align: left;
   }
 }
 
