--- a/css/main.css
+++ b/css/main.css
@@ -1024,6 +1024,11 @@ address {
   right: 28px;
 }
 
+.container-address-social {
+  display: flex;
+  align-items: center;
+}
+
 @media screen and (max-width: 768px) {
   .container-address,
   .social-media-footer {
@@ -1033,6 +1038,9 @@ address {
     margin-right: 100px;
     margin-left: 100px;
     margin-bottom: 60px;
+  }
+  .container-address-social {
+    flex-direction: column;
   }
   .subscription-form-input {
     width: 100%;
@@ -1063,6 +1071,30 @@ address {
     margin-left: 60px;
     margin-right: 60px;
     margin-bottom: 60px;
+  }
+  .container-address-social {
+    justify-content: space-between;
+    width: 100%;
+    align-items: baseline;
+  }
+  .subscription-form-input {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .subscription {
+    margin: auto;
+    text-align: center;
+  }
+  .container-footer {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .subscription-form-icon {
+    position: absolute;
+    top: 77%;
+    left: 62%;
+    right: 28px;
   }
 }
 
